<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFBBCCCC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world_again" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtview_2dfgdasdasdasdasdasdasdasdafgfdgdfgfdgdfgdfgdfgdfskl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/test_1" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/type_your_edittext_example_here" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/test2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_1"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/_4" />
    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="150dp"
        android:gravity="center_horizontal"
        android:padding="25dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textOff="@string/toggle_button_is_off"
        android:textOn="@string/toggle_button_is_on" />

</LinearLayout>